# weld-sim

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  UltrasonicWeldMaster.spec  cli.py  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements-web.txt  requirements.txt  run_web.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  main.py
contracts/: openapi.yaml  websocket-protocol.md
data/: database.sqlite-shm
deploy/: deploy.sh  weld-sim-worker.service  weld-sim.service
docker/: Dockerfile.fenics  docker-compose.yml
docker/fenics_worker/: main.py  requirements.txt
docker/scripts/: __init__.py  contact_solver.py  thermal_solver.py
docs/: 06-超声波焊接锂电池变量全景图.md  07-系统架构与算法框架设计.md  cross-discussion-minutes.md  deployment.md
docs/design/: material_database_fatigue_assessment.md
docs/experts/: 01-超声波物理学专家.md  02-材料科学专家.md  03-机械工程与工艺专家.md  04-锂电池工艺专家.md  05-控制理论与智能制造专家.md  06-深度研究补充-三大方向.md
docs/plans/: 2026-02-25-ultrasonic-weld-master-design.md  2026-02-26-calculation-engine-enhancement-design.md  2026-02-26-i18n-packaging-design.md  2026-02-26-i18n-packaging-plan.md  (+22 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
scripts/: build.py
tests/: test_chamfer_physics.py  test_cli.py  test_horn_generator.py  test_integration.py  test_knurl_optimizer.py  test_new_materials.py  test_suggestions.py
translations/: app_en.ts  app_zh_CN.ts
ultrasonic_weld_master/: __init__.py
web/: app.py  config.py  dependencies.py
(+371 files in other folders)
