[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ultrasonic-weld-master"
version = "0.1.0"
description = "Ultrasonic metal welding parameter auto-generation and experiment report software"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.5",
    "numpy>=1.24",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "reportlab>=4.0",
    "openpyxl>=3.1",
    "matplotlib>=3.8",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
include = ["ultrasonic_weld_master*"]
